--- a/.travis.yml
+++ b/.travis.yml
@@ -39,13 +39,12 @@ jobs:
             - gcc-6
             - g++-6
             - build-essential
-            - libpapi-dev
-            - papi-tools
+            - libtbb-dev
       env:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--quick --build-libs static shared --python --papi --gotcha --caliper --stats --cxx-standard=14'
+        - BUILD_ARGS='--build-libs shared --python --stats --cxx-standard=17 --extra-optimizations'
     # GCC 7
     - os: linux
       dist: bionic
@@ -87,6 +86,7 @@ jobs:
       env:
         - CC=gcc-8
         - CXX=g++-8
+        - BUILD_TYPE=Release
         - BUILD_ARGS='--build-libs static --mpi --cxx-standard=17'
     # Clang 6.0
     - os: linux
@@ -115,16 +115,10 @@ jobs:
             - clang-7
             - clang++-7
             - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
-            - libpapi-dev
-            - papi-tools
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --stats --tools ompt --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static shared --python --caliper --stats --tools ompt --cxx-standard=14'
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7 / Linux
@@ -142,8 +136,6 @@ jobs:
             - gcc-6
             - g++-6
             - build-essential
-            - libmpich-dev
-            - mpich
             - libpapi-dev
             - papi-tools
       env:
@@ -161,17 +153,13 @@ jobs:
             - gcc
             - g++
             - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
             - libpapi-dev
             - papi-tools
       env:
         - CC=gcc
         - CXX=g++
         - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs static --papi --mpi --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --papi --cxx-standard=14'
     #
     # GCC 8
     - os: linux
@@ -185,15 +173,15 @@ jobs:
             - gcc-8
             - g++-8
             - build-essential
-            - libmpich-dev
-            - mpich
-            - graphviz
-            - libtbb-dev
+            - libopenmpi-dev
+            - openmpi-bin
+            - openmpi-common
+            - libfabric-dev
       env:
         - CC=gcc-8
         - CXX=g++-8
         - BUILD_TYPE=Release
-        - BUILD_ARGS='--build-libs shared --mpi --python --stats --cxx-standard=17 --extra-optimizations'
+        - BUILD_ARGS='--build-libs shared --mpi --cxx-standard=17'
     # Clang 6.0
     - os: linux
       dist: xenial
@@ -207,17 +195,13 @@ jobs:
             - clang-6.0
             - clang++-6.0
             - build-essential
-            - libmpich-dev
-            - mpich
-            - libpapi-dev
-            - papi-tools
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
       env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --stats --tools compiler --cxx-standard=14 --profile=cpu'
+        - BUILD_ARGS='--build-libs shared --gperftools --stats --tools compiler --cxx-standard=14 --profile=cpu'
         - CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'
     # Clang 7
     - os: linux
