--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(ex-cxx-tuple)
 add_subdirectory(ex-statistics)
 add_subdirectory(ex-cxx-overhead)
 add_subdirectory(ex-compiler-instrument)
+add_subdirectory(ex-array-of-bundles)
 
 # external package related
 add_subdirectory(ex-caliper)
