--- a/source/timemory/manager/CMakeLists.txt
+++ b/source/timemory/manager/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
-    USE_INSTANCE
+    USE_INTERFACE
     NAME                manager
     TARGET              manager
     CATEGORY            GLOBAL
