Python, macros, operation::dummy, math, serialization changes
- python socket
- python console script
- python plotting updates due to change in serialization
- python testing output folder name fixes
- updated attribute macros
- updated component base math operations
- fixed issue with data_tracker dividing by unit
- macros/attributes header
- updated component serialization
- operation::dummy
- NOINLINE singleton
- minor socket changes
- fix for timem page_rss/virtual_memory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ exclude = '''
     | docker
     | docs
   )/
-  | foo.py           # also separately exclude a file named foo.py in
-                     # the root of the project
+  | cmake/Templates/console-script.py.in
 )
 '''
