WINSOCK + settings.read + python roofline plotter
- Enable TIMEMORY_USE_WINSOCK in Python on Windows
- fix to timemory_init calling settings->read
- python roofline plotting fix following serialization change

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -31,6 +31,10 @@ function(TIMEMORY_CONFIGURE_PYTARGET _TARGET)
         set(_SUBDIR "/${_SUBDIR}")
     endif()
 
+    if(WIN32)
+        target_compile_definitions(libpytimemory-interface INTERFACE TIMEMORY_USE_WINSOCK)
+    endif()
+
     if(TIMEMORY_USE_CUDA)
         set(EXTRA_PROPERTIES LINKER_LANGUAGE CUDA)
     endif()
