--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -46,9 +46,11 @@ endif()
 # add_target_cxx_flag_if_avail(no-store-merge "-fno-store-merging")
 add_library(test-opt-flags INTERFACE)
 string(REPLACE " " ";" _FLAGS "${CMAKE_CXX_FLAGS_RELEASE}")
-target_compile_options(test-opt-flags INTERFACE ${_FLAGS})
-if(NOT TIMEMORY_USE_ARCH)
-  add_target_flag_if_avail(test-opt-flags "-march=native")
+if(NOT TIMEMORY_USE_COVERAGE)
+    target_compile_options(test-opt-flags INTERFACE ${_FLAGS})
+    if(NOT TIMEMORY_USE_ARCH)
+        add_target_flag_if_avail(test-opt-flags "-march=native")
+    endif()
 endif()
 
 # Debug flags
