--- a/source/timemory/components/cuda/CMakeLists.txt
+++ b/source/timemory/components/cuda/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 if(TIMEMORY_USE_CUDA)
     set(NAME cuda)
-    set(DEPS timemory-cuda)
+    set(DEPS timemory-cuda timemory-cudart)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
