--- a/source/tests/scripts/binary-rewrite.sh.in
+++ b/source/tests/scripts/binary-rewrite.sh.in
@@ -2,6 +2,8 @@
 #
 # NOTE: add '--mpi' after @PROJECT_BINARY_DIR@/timemory-run to applications built with MPI
 #
+source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
+
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
 export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-output
 rm -rf ${TIMEMORY_OUTPUT_PATH}
