--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -127,7 +127,11 @@ EXECUTE_PROCESS(
 if(APPLE)
     set(_LIB_TYPES shared)
 else()
-    set(_LIB_TYPES shared static)
+    if(CMAKE_CXX_COMPILER_IS_GNU)
+        set(_LIB_TYPES shared static)
+    else()
+        set(_LIB_TYPES shared)
+    endif()
 endif()
 
 foreach(LIB_TYPE ${_LIB_TYPES})
