Fixes to dynamic instrumentation + MPIP - corrected docs for MPIP and OMPT - user_bundle extern - attributes for settings functions - update READMEs and docs - renamed timemory-compile-options-extra to timemory-compile-extra

--- a/source/tests/scripts/binary-rewrite-mpip.sh.in
+++ b/source/tests/scripts/binary-rewrite-mpip.sh.in
@@ -37,3 +37,11 @@ if [ "${NMPIP}" -le "${NORIG}" ]; then
     echo -e "$(cat ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt | grep '>>>')"
     exit 1
 fi
+
+NALLR=$(cat ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt | grep MPI_Allreduce | wc -l)
+
+if [ "${NALLR}" -eq 0 ]; then
+    echo -e "\nMPIP results did not contain MPI_Allreduce!:\n"
+    echo -e "$(cat ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt | grep '>>>')"
+    exit 1
+fi
