Updates the minimum CMake version to 3.13
- v3.11 has issues with exporting libraries built in subdirectories

--- a/source/tools/timemory-pid/CMakeLists.txt
+++ b/source/tools/timemory-pid/CMakeLists.txt
@@ -6,7 +6,7 @@ endif()
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-pid tool which provides a PID to MPI applications
 #
-add_executable(timemory-pid EXCLUDE_FROM_ALL timemory-pid.cpp)
+add_executable(timemory-pid timemory-pid.cpp)
 
 target_link_libraries(timemory-pid PRIVATE
     timemory::timemory-compile-options
@@ -17,4 +17,7 @@ set_target_properties(timemory-pid PROPERTIES
     INSTALL_RPATH_USE_LINK_PATH ON)
 
 # timemory-pid installation
-install(TARGETS timemory-pid DESTINATION bin OPTIONAL)
+install(
+    TARGETS timemory-pid
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    OPTIONAL)
